dex/force-bridge/dex-force-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-dex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-dex-force-server
spec:
  rules:
  - host: bridger-server.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: dex-force-server-svc
          servicePort: 80
